Bug 60092 - : LO crashes when inserting data from data sources as a table
Summary: : LO crashes when inserting data from data sources as a table
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.0.beta2
Hardware: Other All
: high critical
Assignee: Michael Stahl
URL:
Whiteboard: BSA bibisected40 target:4.1.0 target:...
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-01-30 22:22 UTC by Florian R. A. Angermeier
Modified: 2015-12-22 01:31 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Florian R. A. Angermeier 2013-01-30 22:22:25 UTC
Problem description: Like in the subject mentioned LO crashes when you insert data from "data sources" (e.g. from the sample database biblio) as a table. Fields and plain text are OK.

Steps to reproduce:
1. Open "data sources" with F4
2. drag some data (whole table, row, field) into the text document
3. choose "table"
4. put some columns in
5. insert data via "OK"

Current behavior:
LO crashes.

Expected behavior:
Data is inserted into the document as a table.       
Operating System: All
Version: 4.0.0.0.beta2
Last worked in: 3.6.5.2 rc
Comment 1 Joel Madero 2013-01-31 17:07:40 UTC
Sorry I'm not understanding "put some columns in". Please clarify what this means and I will triage the bug.
Comment 2 Florian R. A. Angermeier 2013-02-01 11:52:30 UTC
I meant you pick colums to be included in the table.

 ____________________          ____________________
| Column 2           | [ >> ] | Column 1           |
| Column 3           |        |                    |
| ...                | [ << ] |                    |
|                    |        |                    |
Comment 3 Jorendc 2013-02-01 17:56:34 UTC
Thanks for reporting!

I can confirm this using Linux Mint 14 x64; LibreOffice Versie 4.0.0.2 .0.2 (Bouw-id: 408fe71bd18616c467b3dcd7ab6756528ffcae2); Dutch UI and LibreOffice Version 4.1.0.0.alpha0+ (Build ID: 6c76cdce33d29d25a1023d5363a840ac5972c95).
Comment 4 Joel Madero 2013-02-01 18:46:18 UTC
Prioritizing:

Critical -> Crash/Loss of Data
Highest -> Critical + Regression

Bibisect:
 0d11003080a0f6ac57d1a3040552382797108548 is the first bad commit
commit 0d11003080a0f6ac57d1a3040552382797108548
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Mon Dec 10 01:22:50 2012 +0000

    source-hash-21dd191b9fd5a75f7633ea27f745a347adb42ae3
    
    commit 21dd191b9fd5a75f7633ea27f745a347adb42ae3
    Author:     Noel Grandin <noel@peralex.com>
    AuthorDate: Fri Jul 13 15:20:39 2012 +0200
    Commit:     Michael Stahl <mstahl@redhat.com>
    CommitDate: Tue Jul 17 15:33:34 2012 +0200
    
        Convert SV_DECL_PTRARR_SORT(SwDestroyList) to std::set
    
        Change-Id: Ifbee6942045b26fc7df8fb96d910197f77729b4b

:100644 100644 13d66368624db1158439984d29b9b6b4e382edc1 a0cb51fd961ac7c36664039de46e9568c5ccba18 M	autogen.log
:100644 100644 ab5cb173d26c712f4f0b3768b20921326a298faf 4d71a655ba9c7f4367fa0ad343c3d3fca21db58d M	ccache.log
:100644 100644 b673e1e2d524aa0ac5ea208305aa72d64ef75e85 e6d7c27a36ce4105db810fbff826d9b862fcba46 M	commitmsg
:100644 100644 701af077bfba9dbd53e4ed300daafc1c6853fd95 dc8ff3e836892bf5ce91d3fa29c2b9f7f4cfe162 M	dev-install.log
:100644 100644 5a022646e5d271579c529aec4f74867fbd84cd35 83db6377e3f2405d20c058544be4f2b918852266 M	make.log
:040000 040000 348fa0564620b55634dd0ae025b5068fc79c7a0f 8b7b928585f6981c6de6516b99173e72362469c4 M	opt



# bad: [5b4b36d87517a6ea96ff8c84c46b12f462fc9a1a] source-hash-8450a99c744e9005f19173e4df35d65640bcf5c4
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect start 'latest' 'oldest'
# good: [16b0b88cbd4ef0f51816e97277e40c5cf78f7bf9] source-hash-099198a4224778fe6e43f5dc13b5b9b1b4dc828c
git bisect good 16b0b88cbd4ef0f51816e97277e40c5cf78f7bf9
# bad: [f28b8f9a6c47fa59bf98fffe937a2f2db7a2445a] source-hash-a581d31b227623e09d2970a91214fda398f98eda
git bisect bad f28b8f9a6c47fa59bf98fffe937a2f2db7a2445a
# good: [5bf3b624cdeb593e55402f44c730209f12813961] source-hash-4b4ca8030285bd66526ff5bb2b6ea5a75a6c6bc7
git bisect good 5bf3b624cdeb593e55402f44c730209f12813961
# bad: [70771b69f427dcd3ace8caea819338f104b88c43] source-hash-83837d6514217c82ebe8d56dddf89fa34f4b5435
git bisect bad 70771b69f427dcd3ace8caea819338f104b88c43
# bad: [517b06fcbaceee61aa0ce4cc51663cc835444966] source-hash-06f20d73da21342046a480a6b22af69901351328
git bisect bad 517b06fcbaceee61aa0ce4cc51663cc835444966
# good: [e3fca4693fc359630ec1bbf45821875104da8928] source-hash-45c8db7ec89978029db2027585da986794971f7c
git bisect good e3fca4693fc359630ec1bbf45821875104da8928
# bad: [bb8ed88d57a361495aca9de668df80050d41ebc5] source-hash-36170cd0dbc3409270cf3cf998805a790ee6228f
git bisect bad bb8ed88d57a361495aca9de668df80050d41ebc5
# bad: [0d11003080a0f6ac57d1a3040552382797108548] source-hash-21dd191b9fd5a75f7633ea27f745a347adb42ae3
git bisect bad 0d11003080a0f6ac57d1a3040552382797108548
Comment 5 Michael Stahl 2013-02-12 14:05:38 UTC
was caused by STL conversion of SwInsDBColumns; fixed on master
Comment 6 Not Assigned 2013-02-12 14:11:07 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cbc722733bb272b0f26efec09b478bed9a3cdb96

fdo#60092: fix STL regression in SwInsertDBColAutoPilot::DataToDoc



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Not Assigned 2013-02-13 09:01:03 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b1004870a37aba0232c451580ca21d33184bbeca&h=libreoffice-4-0

fdo#60092: fix STL regression in SwInsertDBColAutoPilot::DataToDoc


It will be available in LibreOffice 4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Robinson Tryon (qubit) 2015-12-22 01:31:13 UTC
Removing comma from Whiteboard (please use a space to delimit values in this field)
https://wiki.documentfoundation.org/QA/Bugzilla/Fields/Whiteboard#Getting_Started
[NinjaEdit]