fdo#60092: fix STL regression in SwInsertDBColAutoPilot::DataToDoc

(regression from f7d681dc34e60eb8532403079d007ca1250f4941)

Change-Id: Ida92854efe6ddffffb8fe10e5ef1f42c53747f40